--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -12,44 +12,50 @@
 
 </head>
 <body>
-<div class="container-fluid">
 
-    <!--  导航开始  -->
+<!--  导航开始  -->
+<nav class="navbar navbar-default" role="navigation">
+    <div class="col-sm-8 col-sm-offset-2">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#example-navbar-collapse">
+                <span class="sr-only">切换导航</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="btn btn-default navbar-toggle" >创建任务</a>
+            <a class="navbar-brand" href="{{url_for('home')}}">SimpleTask</a>
 
-    <nav class="navbar navbar-default" role="navigation">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse"
-                data-target="#example-navbar-collapse">
-            <span class="sr-only">切换导航</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="{{url_for('home')}}">SimpleTask</a>
-        <input type="button" class="btn btn-default btn-lg add-task-btn" value="创建任务">
-    </div>
-    <div class="collapse navbar-collapse" id="example-navbar-collapse">
-        <ul class="nav navbar-nav">
-            <li><a href="{{url_for('task.main')}}">任务列表</a></li>
-            <li><a href="{{url_for('circle.home')}}">朋友圈</a></li>
-            <li><a href="{{url_for('circle.explore')}}">发现</a></li>
+        </div>
+        <div class="collapse navbar-collapse" id="example-navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="{{url_for('task.main')}}">任务列表</a></li>
+                <li><a href="{{url_for('circle.home')}}">朋友圈</a></li>
+                <li><a href="{{url_for('circle.explore')}}">发现</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    {{current_user.username}} <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="{{url_for('people.people',username=current_user.username)}}">我的主页</a></li>
-                    <li><a href="#">设置</a></li>
-                    <li class="divider"></li>
-                    <li><a href="{{url_for('logout')}}">退出</a></li>
-                </ul>
-            </li>
-        </ul>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        {{current_user.username}} <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu ">
+                        <li><a href="{{url_for('people.people',username=current_user.username)}}">我的主页</a></li>
+                        <li><a href="#">设置</a></li>
+                        <li class="divider"></li>
+                        <li><a href="{{url_for('logout')}}">退出</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
+<!-- 导航结束 -->
 
-    <!-- 导航结束 -->
 
+<div class="container-fluid">
+
+    <div class="col-sm-8 col-sm-offset-2">
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category, message in messages %}
@@ -62,10 +68,10 @@
     {% endwith %}
 
 
-{% block body %}
-{% endblock %}
+    {% block body %}
+    {% endblock %}
+    </div>
 </div>
-
 
 <script src="//cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
