--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -11,7 +11,7 @@
 <div class = "container">
 
 
-<div class="col-sm-4 col-md-offset-4">
+<div class="col-sm-4 col-sm-offset-4">
     <div class="row page-header">
         <h1 class="text-center">SimpleTask</h1>
     </div>
