--- a/webapp/templates/people/task.html
+++ b/webapp/templates/people/task.html
@@ -4,72 +4,63 @@
 
 {% block body %}
 <div class="col-lg-9">
+
     <div class = "row">
-
-        <div class="col-lg-9">
-            <div class = "row">
-                <h3>{{ task.title }}</h3>
-                <small>创建于{{task.create_time}}，计划完成时间{{task.deadline}}{% if task.is_overtime() %}，{{task.over_time() }}{%endif%}</small>
-            </div>
-        </div>
-        <div class="col-lg-9">
-            <div class = "row">
-                <p>{{ task.text }}</p>
-            </div>
-        </div>
-
-                <div class="col-lg-9">
-            <div class = "row">
-                <small>
-                    {% if task.check_liked() %}
-                        <input type="button" class="btn btn-primary btn-xs like_btn" tid={{task.id}} value="{{task.liked.all()|length}}赞" >
-                    {% else %}
-                        <input type="button" class="btn btn-default btn-xs like_btn" tid={{task.id}} value="{{task.liked.all()|length}}赞" >
-                    {% endif %}
-
-                    {%if not task.comment_allowed%}评论已关闭{%else%}{{ task.comments.all() | length }}个评论{%endif%}
-                </small>
-            </div>
-        </div>
-
-        <div class="col-lg-9">{# 评论区 start #}
-            <div class = "row">
-                {% if task.comment_allowed %}
-                    <div class="col-lg-9">
-                        <div class = "row">
-                            <form method="post">
-                                {{comment_form.hidden_tag()}}
-                                <div class="row control-group">
-                                    {{comment_form.text.label}}{%if comment_form.text.errors%}{% for e in comment_form.text.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
-                                    {{comment_form.text(class='form-control')}}
-                                </div>
-                                <div class="row control-group">
-                                    {{comment_form.submit(class='btn btn-warning btn-xs')}}
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-9">
-                         <div class = "row">
-                        {% for comment in comments %}
-                            <div class = "row">
-                                {{comment.username()}}在{{comment.date}}说：
-                                <br />{{comment.text}}
-                            </div>
-                        {% endfor %}
-                         </div>
-                    </div>
-                {% else %}
-                    <div class="col-lg-9">
-                        <div class = "row">
-                            <p>评论已关闭</p>
-                        </div>
-                    </div>
-                {% endif %}
-            </div>
-        </div>{# 评论区 end #}
+        <h3>{{ task.title }}</h3>
+        <small>创建于{{task.create_time}}，计划完成时间{{task.deadline}}{% if task.is_overtime() %}，{{task.over_time() }}{%endif%}</small>
     </div>
+
+    <div class = "row">
+        <p>{{ task.text }}</p>
+    </div>
+
+
+
+    <div class = "row">
+        <small>
+            {% if task.check_liked() %}
+                <input type="button" class="btn btn-primary btn-sm like_btn" tid={{task.id}} value="{{task.liked.all()|length}}赞" >
+            {% else %}
+                <input type="button" class="btn btn-default btn-sm like_btn" tid={{task.id}} value="{{task.liked.all()|length}}赞" >
+            {% endif %}
+
+            {%if not task.comment_allowed%}评论已关闭{%else%}{{ task.comments.all() | length }}个评论{%endif%}
+        </small>
+
+    </div>
+
+
+    {% if task.comment_allowed %}{# 评论区 start #}
+        <div class = "row">
+            <form method="post">
+                {{comment_form.hidden_tag()}}
+                <div class="form-group">
+                    {{comment_form.text.label}}{%if comment_form.text.errors%}{% for e in comment_form.text.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
+                    {{comment_form.text(class='form-control')}}
+                </div>
+                <div class="form-group">
+                    {{comment_form.submit(class='btn btn-warning')}}
+                </div>
+            </form>
+        </div>
+
+         <div class = "row">
+        {% for comment in comments %}
+            <div class = "row">
+                {{comment.username()}}在{{comment.date}}说：
+                <br />{{comment.text}}
+            </div>
+        {% endfor %}
+         </div>
+
+    {% else %}
+
+        <div class = "row">
+            <p>评论已关闭</p>
+        </div>
+
+    {% endif %}{# 评论区 end #}
+
 </div>
 
 
