--- a/webapp/templates/task/task_new.html
+++ b/webapp/templates/task/task_new.html
@@ -8,32 +8,36 @@
 <div class="col-lg-9">
 
     <div class = "row">
-        <div class="col-lg-12">
-            <h3>{{page_title}}</h3>
-            <div class="form-groups">
-                <form method="post" >
-                {{form.hidden_tag()}}
+        <h3>{{page_title}}</h3>
 
-                {{form.title.label}}{%if form.title.errors%}{% for e in form.title.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
-                {{form.title(class='form-control')}}
+        <form method="post" >{{form.hidden_tag()}}
 
-                {{form.text.label}}{%if form.text.errors%}{% for e in form.text.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
-                {{form.text(class='form-control')}}
-
-                {{form.deadline.label}}{%if form.deadline.errors%}{% for e in form.deadline.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
-                {{form.deadline(class="form-control",value=now) }}
-
-                {{form.public_level.label}}{%if form.public_level.errors%}{% for e in form.public_level.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
-                {{form.public_level(class='radio')}}
-
-                {{form.comment_allowed.label}} {{form.comment_allowed()}}
-
-                    <p>{{form.submit(class='btn btn-success btn-sm')}}</p>
-                </form>
+            <div class="form-group">
+            {{form.title.label}}{%if form.title.errors%}{% for e in form.title.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
+            {{form.title(class='form-control')}}
             </div>
-        </div>
+            <div class="form-group">
+            {{form.text.label}}{%if form.text.errors%}{% for e in form.text.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
+            {{form.text(class='form-control')}}
+            </div>
+            <div class="form-group">
+            {{form.deadline.label}}{%if form.deadline.errors%}{% for e in form.deadline.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
+            {{form.deadline(class="form-control",value=now) }}
+            </div>
+            <div class="form-group">
+            {{form.public_level.label}}{%if form.public_level.errors%}{% for e in form.public_level.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
+            {{form.public_level(class='radio')}}
+            </div>
+            <div class="form-group">
+            {{form.comment_allowed.label}} {{form.comment_allowed()}}
+            </div>
+            <div class="form-group">
+                <p>{{form.submit(class='btn btn-success btn-sm')}}</p>
+            </div>
+        </form>
     </div>
 </div>
+
     {{ macros.task_sidebar(user=current_user) }}
 
 {% endblock %}
