--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}SimpleTask{% endblock %}</title>
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{{url_for('static',filename='local.css')}}">
     {%block script %}{%endblock%}
-
 
 </head>
 <body>
 
-<!--  导航开始  -->
-<nav class="navbar navbar-default" role="navigation">
+{# 导航开始 #}
+<nav class="navbar navbar-default " role="navigation">
     <div class="col-sm-8 col-sm-offset-2">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -24,18 +23,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="btn btn-default navbar-toggle" >创建任务</a>
             <a class="navbar-brand" href="{{url_for('home')}}">SimpleTask</a>
+            <input type="button" class="btn navbar-btn btn-default add-task-btn" value="创建任务">
 
         </div>
         <div class="collapse navbar-collapse" id="example-navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{{url_for('task.main')}}">任务列表</a></li>
-                <li><a href="{{url_for('circle.home')}}">朋友圈</a></li>
-                <li><a href="{{url_for('circle.explore')}}">发现</a></li>
+                <li {%if request.path =="/task/" %}class="active"{%endif%}><a href="{{url_for('task.home')}}">任务</a></li>
+                <li {%if request.path =="/circle/" %}class="active"{%endif%}><a href="{{url_for('circle.home')}}">圈子</a></li>
+                <li {%if request.path =="/explore/" %}class="active"{%endif%}><a href="{{url_for('explore.home')}}">发现</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
+                <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         {{current_user.username}} <b class="caret"></b>
                     </a>
@@ -50,7 +49,7 @@
         </div>
     </div>
 </nav>
-<!-- 导航结束 -->
+{# 导航结束 #}
 
 
 <div class="container-fluid">
