--- a/webapp/templates/people/macros.html
+++ b/webapp/templates/people/macros.html
@@ -1,6 +1,6 @@
 {% macro people_sidebar(user,current_user) %}
 
-    <div class ="col-lg-3">
+    <div class ="col-sm-3">
         <div class = "row">
             <h2>{{user.username}}</h2>
             {% if current_user != user %}
