--- a/webapp/templates/people/task.html
+++ b/webapp/templates/people/task.html
@@ -6,7 +6,18 @@
 <div class="col-lg-9">
 
     <div class = "row">
-        <h3>{{ task.title }}</h3>
+        <h3>{{ task.title }} {#标题#}
+            {#状态标记#}
+            {% if task.status == 1 %}
+            <input type="button" class="btn btn-success btn-xs disabled" value="已完成">
+            {%else%}
+                {% if task.is_overtime() %}
+                <input type="button" class="btn btn-warning btn-xs disabled" value="未完成"> {#超时#}
+                {%else%}
+                <input type="button" class="btn btn-primary btn-xs disabled" value="未完成"> {#未超时#}
+                {%endif%}
+            {%endif%}
+        </h3>
         <small>创建于{{task.create_time}}，计划完成时间{{task.deadline}}{% if task.is_overtime() %}，{{task.over_time() }}{%endif%}</small>
     </div>
 
