--- a/webapp/templates/task/task_edit.html
+++ b/webapp/templates/task/task_edit.html
@@ -60,6 +60,6 @@
 </div>
 
 
-    {{ macros.task_sidebar(user=current_user) }}
+    {{ main_macros.task_sidebar(user=current_user) }}
 
 {% endblock %}
