--- a/webapp/templates/people/people.html
+++ b/webapp/templates/people/people.html
@@ -1,47 +1,35 @@
 {% extends "base.html" %}
-{% import "people/macros.html" as people_macros %}
+{% import "macros.html" as main_macros %}
 {% block title %}{{display_user.username}} - {{super()}}{% endblock %}
 
 {% block body %}
 <div class="col-lg-9">
     <div class = "row">
 
-        {% for task in tasks %}
-            <div class = "row">
-                <h3>
-                    <a href="{{url_for('people.task',task_id=task.id)}}">{{ task.title }}</a>
-                    {#状态标记#}
-                    {% if task.status == 1 %}
-                    <input type="button" class="btn btn-success btn-xs disabled" value="已完成">
-                    {%else%}
-                        {% if task.is_overtime() %}
-                            <input type="button" class="btn btn-warning btn-xs disabled" value="未完成"> {#超时#}
-                            {%else%}
-                            <input type="button" class="btn btn-primary btn-xs disabled" value="未完成"> {#未超时#}
-                            {%endif%}
-                    {%endif%}
-                </h3>
-                <small>计划完成时间：{{task.deadline}} {% if task.done_time %}| 完成时间：{{task.done_time}}{%endif%}
-                    {% if task.is_overtime() %} | {{task.over_time() }}{%endif%}</small>
+    {%if tasks%}
+    {% for task in tasks %}
+        <div class = "row">
+            <h3>
+                <a href="{{url_for('people.task',task_id=task.id)}}">{{ task.title }}</a>
+               {{main_macros.task_status_mark(task)}}
+            </h3>
+            <small>计划完成时间：{{task.deadline}} {% if task.done_time %}| 完成时间：{{task.done_time}}{%endif%}
+                {% if task.is_overtime() %} | {{task.over_time() }}{%endif%}</small>
 
-                <p>{{ task.text }}</p>
+            <p>{{ task.text }}</p>
 
-            </div>
-            <div class = "row">
-                <small>
-                    {% if task.check_liked() %}
-                        <input type="button" class="btn btn-primary btn-xs like_btn" tid={{task.id}} value="{{task.liked.all()|length}}赞" >
-                    {% else %}
-                        <input type="button" class="btn btn-default btn-xs like_btn" tid={{task.id}} value="{{task.liked.all()|length}}赞" >
-                    {% endif %}
-
-                    {%if not task.comment_allowed%}评论已关闭{%else%}{{ task.comments.all() | length }}个评论{%endif%}
-                </small>
-            </div>
-        {% endfor %}
+        </div>
+        <div class = "row">
+            <small>
+                {{ main_macros.task_like_mark(task,current_user) }} {#点赞模块#}
+                {%if not task.comment_allowed%}评论已关闭{%else%}{{ task.comments.all() | length }}个评论{%endif%}
+            </small>
+        </div>
+    {% endfor %}
+    {%else%}没有内容可以展示哦{%endif%}
     </div>
 </div>
 
-{{ people_macros.people_sidebar(user=display_user,current_user=current_user) }}
+{{ main_macros.people_sidebar(user=display_user,current_user=current_user) }}
 
 {% endblock %}
