--- a/webapp/templates/people/task.html
+++ b/webapp/templates/people/task.html
@@ -1,22 +1,12 @@
 {% extends "base.html" %}
-{% import "people/macros.html" as people_macros %}
+{% import "macros.html" as main_macros %}
 {% block title %}{{task.title}} - {{super()}}{% endblock %}
 
 {% block body %}
 <div class="col-lg-9">
 
     <div class = "row">
-        <h3>{{ task.title }} {#标题#}
-            {#状态标记#}
-            {% if task.status == 1 %}
-            <input type="button" class="btn btn-success btn-xs disabled" value="已完成">
-            {%else%}
-                {% if task.is_overtime() %}
-                <input type="button" class="btn btn-warning btn-xs disabled" value="未完成"> {#超时#}
-                {%else%}
-                <input type="button" class="btn btn-primary btn-xs disabled" value="未完成"> {#未超时#}
-                {%endif%}
-            {%endif%}
+        <h3>{{ task.title }}{{main_macros.task_status_mark(task)}}
         </h3>
         <small>创建于{{task.create_time}}，计划完成时间{{task.deadline}}{% if task.is_overtime() %}，{{task.over_time() }}{%endif%}</small>
     </div>
@@ -29,11 +19,7 @@
 
     <div class = "row">
         <small>
-            {% if task.check_liked() %}
-                <input type="button" class="btn btn-primary btn-sm like_btn" tid={{task.id}} value="{{task.liked.all()|length}}赞" >
-            {% else %}
-                <input type="button" class="btn btn-default btn-sm like_btn" tid={{task.id}} value="{{task.liked.all()|length}}赞" >
-            {% endif %}
+            {{ main_macros.task_like_mark(task,current_user) }} {#点赞模块#}
 
             {%if not task.comment_allowed%}评论已关闭{%else%}{{ task.comments.all() | length }}个评论{%endif%}
         </small>
@@ -75,6 +61,6 @@
 </div>
 
 
-{{ people_macros.people_sidebar(user=display_user,current_user=current_user) }}
+{{ main_macros.people_sidebar(user=display_user,current_user=current_user) }}
 
 {% endblock %}
