--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}SimpleTask{% endblock %}</title>
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static',filename='local.css')}}">
+    <link rel="shortcut icon" href="{{url_for('static',filename='favicon.ico')}}" type="image/x-icon" />
     {%block script %}{%endblock%}
 
 </head>
