--- a/webapp/templates/circle/home.html
+++ b/webapp/templates/circle/home.html
@@ -6,42 +6,46 @@
 
 <div class="col-sm-9">
 
+    {%if tasks%}
     {% for task in tasks %}
-
-        <div class="col-sm-1">{#头像#}
+        <div class="col-sm-12">
             <div class="row">
-                头像占位{#<img src="{{url_for('static',filename='images/1.jpg')}}" width="40" height="40" />#}
-            </div>
-            <div class="row">
-                {{ main_macros.task_like_mark(task,current_user) }} {#点赞模块#}
-            </div>
-        </div>
-        <div class="col-sm-11">
-            <div class = "row">
-                <h6><a href="{{url_for('people.people',username=task.user.username)}}">{{task.user.username}}</a> • <small>{{task.create_time}}</small></h6>
-            </div>
+                <div class="col-lg-1">{#头像#}
+                    <div class="row">
+                        <img src="{{url_for('static',filename='images/1.jpg')}}" width="40" height="40" />
+                    </div>
+                    <div class="row">
+                        {{ main_macros.task_like_mark(task,current_user) }} {#点赞模块#}
+                    </div>
+                </div>
+                <div class="col-lg-9">
+                    <div class = "row">
+                        <h6><a href="{{url_for('people.people',username=task.user.username)}}">{{task.user.username}}</a> • <small>{{task.create_time}}</small></h6>
+                    </div>
 
-            <div class = "row">
-                <h5>
-                    <a href="{{url_for('people.task',task_id=task.id)}}">{{ task.title }}</a>{{main_macros.task_status_mark(task)}}
-                </h5>
-                <small>计划完成时间：{{task.deadline}} {% if task.done_time %}| 完成时间：{{task.done_time}}{%endif%}
-                    {% if task.is_overtime() %} | {{task.over_time() }}{%endif%}</small>
-                <p>{{ task.text }}</p>
+                    <div class = "row">
+                        <h5>
+                            <a href="{{url_for('people.task',task_id=task.id)}}">{{ task.title }}</a>{{main_macros.task_status_mark(task)}}
+                        </h5>
+                        <small>计划完成时间：{{task.deadline}} {% if task.done_time %}| 完成时间：{{task.done_time}}{%endif%}
+                            {% if task.is_overtime() %} | {{task.over_time() }}{%endif%}</small>
+                        <p>{{ task.text }}</p>
+                    </div>
+
+                    <div class = "row">
+                        <small>
+                            {%if not task.comment_allowed%}评论已关闭{%else%}{{ task.comments.all() | length }}个评论{%endif%}
+                        </small>
+
+                    </div>
+                </div>
+
             </div>
-
-            <div class = "row">
-                <small>
-
-
-                    {%if not task.comment_allowed%}评论已关闭{%else%}{{ task.comments.all() | length }}个评论{%endif%}
-                </small>
-                    <hr>
-            </div>
+            <hr>
         </div>
 
     {% endfor %}
-
+    {%else%}没有内容可以展示哦{%endif%}
 </div>
 
 {{ main_macros.task_sidebar(user=current_user) }}
