--- a/webapp/templates/task/task_new.html
+++ b/webapp/templates/task/task_new.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% import "macros.html" as main_macros %}
+{% import "macros_block.html" as macros_block %}
 {% block title %}{{page_title}} - {{super()}}{% endblock %}
 
 {% block body %}
@@ -38,6 +39,6 @@
     </div>
 </div>
 
-    {{ main_macros.task_sidebar(user=current_user) }}
+    {{ macros_block.sidebar(current_user,current_user) }}
 
 {% endblock %}
