--- a/webapp/templates/task/task_page.html
+++ b/webapp/templates/task/task_page.html
@@ -1,15 +1,13 @@
 {% extends "base.html" %}
 {% import "macros.html" as main_macros %}
+{% import "macros_block.html" as macros_block %}
 {% block title %}{{task.title}} - {{super()}}{% endblock %}
 
 {% block body %}
 <div class="col-lg-9">
 
-
-
-
         <div class = "row">{# 任务头 #}
-            <h3>{{ task.title }}{{main_macros.task_status_mark(task)}} <small><a href="{{url_for('task.edit',task_id=task.id)}}">编辑</a></small></h3>
+            <h3>{{ task.title }}{{main_macros.task_status_mark(task)}}</h3>
             <small>创建于{{task.create_time}}，计划完成时间{{task.deadline}}{% if task.is_overtime() %}，{{task.over_time() }}{%endif%}</small>
         </div>
 
@@ -21,57 +19,29 @@
 
         <div class = "row">{# 功能按钮 start #}
             {{ main_macros.task_like_mark(task,current_user) }} {#点赞模块#}
-            {% if task.status !=1 %}
-                <input type="button" class="btn btn-success task-done-btn" tid={{task.id}} value="任务完成">
-            {% endif %}
 
-            {% if task.comment_allowed == 1 %}
-                <input type="button" class="btn btn-default comment_allow_btn" tid={{task.id}} comment_status="0" value="关闭评论">
-            {% else %}
-                <input type="button" class="btn btn-default comment_allow_btn" tid={{task.id}} comment_status="1" value="打开评论">
-            {%endif%}
+            {#任务创建人#}
+            {% if task.user.username == current_user.username %}
+                <small><a href="{{url_for('task.edit',task_id=task.id)}}">编辑</a></small>
+                {% if task.status !=1 %}
+                    <input type="button" class="btn btn-success task-done-btn" tid={{task.id}} value="任务完成">
+                {% endif %}
+
+                {% if task.comment_allowed == 1 %}
+                    <input type="button" class="btn btn-default comment_allow_btn" tid={{task.id}} comment_status="0" value="关闭评论">
+                {% else %}
+                    <input type="button" class="btn btn-default comment_allow_btn" tid={{task.id}} comment_status="1" value="打开评论">
+                {%endif%}
+            {% endif %}
 
         </div>{# 功能按钮 end #}
 
-
-
-
-            {% if task.comment_allowed %} {# 评论区 start #}
-
-                <div class = "row">
-                    <form method="post">
-                        {{comment_form.hidden_tag()}}
-                        <div class="form-group">
-                            {{comment_form.text.label}}{%if comment_form.text.errors%}{% for e in comment_form.text.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
-                            {{comment_form.text(class='form-control')}}
-                        </div>
-                        <div class="form-group">
-                            {{comment_form.submit(class='btn btn-warning')}}
-                        </div>
-                    </form>
-                </div>
-
-
-
-                 <div class = "row">
-                {% for comment in comments %}
-                    <div class = "row">
-                        {{comment.username()}}在{{comment.date}}说：
-                        <br />{{comment.text}}
-                    </div>
-                {% endfor %}
-                 </div>
-
-            {% else %}
-                <div class = "row">
-                    <p>评论已关闭</p>
-                </div>
-            {% endif %}{# 评论区 end #}
+    {{macros_block.task_comment(task,comments,comment_form)}} {#评论区#}
 
 
 </div>
 
 
-{{ macros.task_sidebar(user=current_user) }}
+{{ macros_block.sidebar(current_user,current_user) }}
 
 {% endblock %}
