--- a/webapp/templates/people/people.html
+++ b/webapp/templates/people/people.html
@@ -1,35 +1,17 @@
 {% extends "base.html" %}
 {% import "macros.html" as main_macros %}
+{% import "macros_block.html" as macros_block %}
 {% block title %}{{display_user.username}} - {{super()}}{% endblock %}
 
 {% block body %}
 <div class="col-lg-9">
-    <div class = "row">
+    <div class="col-sm-12">
 
-    {%if tasks%}
-    {% for task in tasks %}
-        <div class = "row">
-            <h3>
-                <a href="{{url_for('people.task',task_id=task.id)}}">{{ task.title }}</a>
-               {{main_macros.task_status_mark(task)}}
-            </h3>
-            <small>计划完成时间：{{task.deadline}} {% if task.done_time %}| 完成时间：{{task.done_time}}{%endif%}
-                {% if task.is_overtime() %} | {{task.over_time() }}{%endif%}</small>
+        {{macros_block.show_task(current_user,tasks)}} {#展示tasks#}
 
-            <p>{{ task.text }}</p>
-
-        </div>
-        <div class = "row">
-            <small>
-                {{ main_macros.task_like_mark(task,current_user) }} {#点赞模块#}
-                {%if not task.comment_allowed%}评论已关闭{%else%}{{ task.comments.all() | length }}个评论{%endif%}
-            </small>
-        </div>
-    {% endfor %}
-    {%else%}没有内容可以展示哦{%endif%}
     </div>
 </div>
 
-{{ main_macros.people_sidebar(user=display_user,current_user=current_user) }}
+{{ macros_block.sidebar(display_user,current_user) }}
 
 {% endblock %}
