1、调整头像的代码；2、调整评论显示

--- a/webapp/templates/circle/home.html
+++ b/webapp/templates/circle/home.html
@@ -10,7 +10,7 @@
     <div class="col-sm-12">
 
 
-            {{macros_block.people_task(current_user,tasks)}} {#展示tasks#}
+            {{macros_block.show_task(current_user,tasks)}} {#展示tasks#}
 
 
     </div>
