--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -11,10 +11,10 @@
     {%block script %}{%endblock%}
 
 </head>
-<body>
+<body style="margin:60px 0 0 0">
 
 {# 导航开始 #}
-<nav class="navbar navbar-default " role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="col-sm-8 col-sm-offset-2">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -25,7 +25,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{url_for('home')}}">SimpleTask</a>
-            <input type="button" class="btn navbar-btn btn-default add-task-btn" value="创建任务">
+            <div class="pull-right"><input type="button" class="btn navbar-btn btn-default add-task-btn" value="创建任务">&nbsp;&nbsp;</div>
 
         </div>
         <div class="collapse navbar-collapse" id="example-navbar-collapse">
@@ -37,7 +37,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        {{current_user.username}} <b class="caret"></b>
+                        <img src="{{current_user.get_avatar()}}" width="18" height="18" class="img-rounded" /> {{current_user.username}} <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu ">
                         <li><a href="{{url_for('people.people',username=current_user.username)}}">我的主页</a></li>
@@ -53,7 +53,7 @@
 {# 导航结束 #}
 
 
-<div class="container-fluid">
+<div class="container-fluid" >
 
     <div class="col-sm-8 col-sm-offset-2">
     {% with messages = get_flashed_messages(with_categories=true) %}
