--- a/webapp/templates/task/task_page.html
+++ b/webapp/templates/task/task_page.html
@@ -8,7 +8,7 @@
 
         <div class = "row">{# 任务头 #}
             <h3>{{ task.title }}{{main_macros.task_status_mark(task)}}</h3>
-            <small>创建于{{task.create_time}}，计划完成时间{{task.deadline}}{% if task.is_overtime() %}，{{task.over_time() }}{%endif%}</small>
+            <small>{{task.user.username}} 创建于{{task.create_time}}，计划完成时间{{task.deadline}}{% if task.is_overtime() %}，{{task.over_time() }}{%endif%}</small>
         </div>
 
 
